sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Char = getNombreValeurs()
  var switch=true
  while (ecart>1 || switch) {
    switch=false
    if (ecart>1) {ecart/=1.3}
    i=0
    while (i+ecart<getNombreValeurs()) {
      if 
    }
  }
}